<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/nombre"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="textCapSentences"
                    android:maxLength="25"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/apellidos"
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_below="@+id/name"
                    android:inputType="textCapSentences"
                    android:maxLength="45"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/dni"
                    android:id="@+id/dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_below="@+id/surname"
                    android:inputType="textCapSentences"
                    android:maxLength="9"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/nick"
                    android:id="@+id/nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="textCapSentences"
                    android:maxLength="25"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion"
                    android:layout_margin="5dp"
                    android:inputType="textCapSentences"
                    android:maxLength="85"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:baselineAligned="false">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1">
                    <EditText
                        android:hint="@string/edad"
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="2"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp">
                    <EditText
                        android:hint="@string/ranking"
                        android:id="@+id/ranking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>